# openchamp-client

./: .gitignore  .gitmodules  export_presets.cfg  project.godot
.github/workflows/: cache_godot.yaml  compile_extension.yaml  compile_linux.yaml  compile_linux_amd64.yaml  compile_linux_arm64.yaml  compile_mac.yaml  compile_windows.yaml  export_game.yaml  release.yaml
extensions/: CMakeLists.txt  SConstruct  ubuntu_noble_arm.sources  ubuntu_noble_x86.sources
extensions/cross_compile_stuff/: Dockerfile  Dockerfile.riscv64  linux-aarch64
extensions/scripts/: compile.py  compile_native.sh  cross_compile_linux_arm.sh
extensions/src/: identifier.cpp  identifier.hpp
scripts/global/: dynamic_asset_loader.gd
